@@ -4,8 +4,16 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="name"/>
     <field name="name"/>
-    <label name="active"/>
-    <field name="active" xexpand="0" width="100"/>
+    <group id="checkboxes" colspan="2" col="-1">
+        <label name="active"/>
+        <field name="active" xexpand="0" width="25"/>
+        <label name="translatable"/>
+        <field name="translatable" xexpand="0" width="25"/>
+        <label name="single"/>
+        <field name="single" xexpand="0" width="25"/>
+        <label name="direct_print"/>
+        <field name="direct_print" xexpand="0" width="25"/>
+    </group>
     <notebook colspan="4">
         <page string="General" id="general">
             <label name="model"/>
@@ -23,11 +31,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="template_extension"/>
             <label name="extension"/>
             <field name="extension"/>
-            <label name="single"/>
-            <field name="single"/>
-            <label name="direct_print"/>
-            <field name="direct_print"/>
-            <newline/>
             <label name="email"/>
             <field name="email" colspan="3" widget="pyson"/>
         </page>
